--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #f5f5fd;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: minmax(300px, auto);
+  grid-gap: 20px;
+  justify-content: start;
+  align-content: flex-start;
+  min-height: calc(100vh - 80px);
+  max-width: 1500px;
+  margin: auto;
+  padding: 1rem;
+}
+
+header {
+  min-height: 80px;
+  color: #15111f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header h1 {
+
+}
+
+.container > * {
+  /* grid-column: span 3; */
+  
+}
+
+.gridItem {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: white;
+  box-shadow: -6px 6px 14px 6px #dbdcee94;
+}
+
+.gridItemHeader {
+  padding: 1rem;
+  border-bottom: 2px solid #9190911f;
+}
+
+.gridItemHeader h2 {
+  color: #15111f;
+}
+
+.gridItemContent {
+  flex-grow: 1;
+  
 }
