--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
 
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #f3f3fb;
+}
+
+.mainHeader {
+  min-height: 80px;
+  color: #15111f;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 3rem;
+}
+
+.mainHeader h1 {
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+}
+
+.profile > div {
+  padding: 0 5rem 0 1.5rem;
+}
+
+.deviceInfo {
+  display: flex;
+}
+
+.deviceInfo h3:first-child {
+  margin-right: 1rem;
+}
+
+.deviceInfo h3 {
+  display: flex;
+  align-items: center;
+  margin-top: 0.4rem;
+}
+
+.deviceInfo h3 svg {
+  margin-right: 0.2rem;
+  width: 1.5em;
+  height: 1.5em;
+}
+
+.deviceInfo h3:first-child svg {
+  margin-right: 0.7rem;
+}
+
+.profile img {
+  border-radius: 100%;
+  width: 70px;
+  box-shadow: 0px 0px 10px 10px #dbdcee33;
+}
+
+.btn {
+  font-family: "Poppins", sans-serif;
+  background-color: #ffffff;
+  color: #15111f;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0.6em 2em;
+  border: none;
+  border-radius: 4rem;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px 10px #dbdcee33;
+  transition: 0.4s;
+}
+
+.btn:hover {
+  color: #ffffff;
+  background-color: #15111f;
 }
