--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .mainHeader {
-  min-height: 80px;
+  min-height: 135px;
   color: #15111f;
   display: flex;
   justify-content: space-between;
@@ -34,25 +34,18 @@ body {
 
 .deviceInfo {
   display: flex;
-}
-
-.deviceInfo h3:first-child {
+  align-items: center;
+  margin-top: 0.4rem;
   margin-right: 1rem;
 }
 
-.deviceInfo h3 {
-  display: flex;
-  align-items: center;
-  margin-top: 0.4rem;
-}
-
-.deviceInfo h3 svg {
+.deviceInfo svg {
   margin-right: 0.2rem;
   width: 1.5em;
   height: 1.5em;
 }
 
-.deviceInfo h3:first-child svg {
+.deviceInfo svg {
   margin-right: 0.7rem;
 }
 
@@ -79,4 +72,57 @@ body {
 .btn:hover {
   color: #ffffff;
   background-color: #15111f;
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  color: #15111f;
+  font-size: 2rem;
+}
+
+.loader p {
+  margin-left: 0.6em;
+}
+
+.loaderSpinner,
+.loaderSpinner:after {
+  border-radius: 50%;
+  width: 1.5em;
+  height: 1.5em;
+}
+.loaderSpinner {
+  position: relative;
+  text-indent: -9999em;
+  border-top: 0.2em solid rgba(28, 37, 65, 0.2);
+  border-right: 0.2em solid rgba(28, 37, 65, 0.2);
+  border-bottom: 0.2em solid rgba(28, 37, 65, 0.2);
+  border-left: 0.2em solid #1c2541;
+  transform: translateZ(0);
+  -webkit-animation: loader 1.1s infinite linear;
+  animation: loader 1.1s infinite linear;
+}
+@-webkit-keyframes loader {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes loader {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.error {
+  color: rgb(202, 39, 39);
 }
