--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,65 @@ body {
 .mainHeader h1 {
 }
 
+.container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: minmax(300px, auto);
+  grid-gap: 20px;
+  justify-content: start;
+  align-content: flex-start;
+  /* min-height: calc(100vh - 80px); */
+  max-width: 1500px;
+  margin: 2rem auto 0;
+  padding: 1rem;
+}
+
+.container > * {
+  /* grid-column: span 3; */
+}
+
+.gridItem {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: white;
+  box-shadow: -6px 6px 14px 6px #dbdcee94;
+}
+
+.gridItemHeader {
+  display: flex;
+  padding: 1rem 1.5rem;
+  border-bottom: 2px solid #9190911f;
+  color: #15111f;
+}
+
+.gridHeaderIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.gridHeaderIcon svg {
+  height: 80%;
+  width: auto;
+}
+
+.gridItemHeader h1 {
+  font-size: 1.5rem;
+}
+
+.gridItemHeader h2 {
+  font-size: 1.2rem;
+  color: #909090;
+  font-weight: 400;
+}
+
+.gridItemContent {
+  flex-grow: 1;
+}
+
 .profile {
   display: flex;
   align-items: center;
