--- a/src/index.css
+++ b/src/index.css
@@ -28,13 +28,13 @@ body {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: minmax(300px, auto);
-  grid-gap: 20px;
+  grid-gap: 2.5rem;
   justify-content: start;
   align-content: flex-start;
   /* min-height: calc(100vh - 80px); */
-  max-width: 1500px;
+  max-width: 1920px;
   margin: 2rem auto 0;
-  padding: 1rem;
+  padding: 0 3rem;
 }
 
 .container > * {
