--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ body {
 }
 
 .gridItem {
+  grid-column: span 3;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
@@ -287,9 +288,7 @@ body {
   color: #f3f3fb;
 }
 
-
-@media all  and (max-width: 1100px) and (min-width: 500px) {
-  
+@media all and (max-width: 1100px) and (min-width: 500px) {
   .container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
