--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,12 @@ body {
 
 .mainHeader {
   min-height: 135px;
+  margin: 0 auto;
   color: #15111f;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1800px;
   padding: 2rem 3rem;
 }
 
@@ -32,7 +34,7 @@ body {
   justify-content: start;
   align-content: flex-start;
   /* min-height: calc(100vh - 80px); */
-  max-width: 1920px;
+  max-width: 1800px;
   margin: 2rem auto 0;
   padding: 0 3rem;
   padding-bottom: 6rem;
