--- a/src/index.css
+++ b/src/index.css
@@ -290,6 +290,92 @@ body {
   color: #f3f3fb;
 }
 
+.calendar {
+  grid-column: span 3;
+  background-color: #fff;
+  width: 100%;
+  min-height: 300px;
+  max-width: 700px;
+  padding: 0.5rem;
+  border-radius: 10px;
+  border: none;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+}
+
+.calendar abbr[title] {
+  text-decoration: none;
+}
+
+.weekend {
+  color: rgb(255, 99, 132);
+}
+
+.tile,
+.react-calendar__navigation button {
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  border: none;
+  background-color: transparent;
+  line-height: 2;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.tile,
+.react-calendar__navigation__arrow {
+  padding: 1em;
+}
+
+.tile:hover,
+.react-calendar__navigation button:hover {
+  background-color: #ececf9;
+}
+
+.react-calendar__month-view__weekdays {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  font-weight: 700;
+}
+
+.react-calendar__navigation {
+  display: flex;
+  justify-content: space-between;
+}
+
+.react-calendar__navigation__label {
+  font-size: 1.2rem !important;
+  flex-grow: 0 !important;
+  padding: 0 4rem;
+}
+
+.react-calendar__navigation__arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendarArrowIcon {
+  width: 2rem;
+  height: auto;
+}
+
+/* .react-calendar__navigation button {
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  padding: 1em;
+  border: none;
+  background-color: transparent;
+  line-height: 2;
+  cursor: pointer;
+  border-radius: 10px;
+} */
+
+.react-calendar__navigation__arrow {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 @media all and (max-width: 1100px) and (min-width: 500px) {
   .container {
     display: grid;
