--- a/src/index.css
+++ b/src/index.css
@@ -428,7 +428,7 @@ body {
 
 .selectedDate,
 .selectedDate:hover {
-  background-color: #8864ff;
+  background-color: #806ed5;
   color: #f3f3fb;
 }
 
