--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
 
 .mainHeader h1 {
   grid-column: 1;
+  margin-right: 2rem;
 }
 
 .profile {
@@ -652,7 +653,7 @@ body {
 
   .profile {
     margin-top: 1rem;
-    grid-column: 1 / 3;
+    grid-column: span 3;
     grid-row: 2;
   }
 
@@ -676,6 +677,10 @@ body {
 }
 
 @media all and (max-width: 500px) {
+  .mainHeader {
+    padding-bottom: 0;
+  }
+
   .gridItemHeader h2 {
     font-size: 0.9rem;
     white-space: pre-wrap;
@@ -742,6 +747,14 @@ body {
 }
 
 @media all and (max-width: 400px) {
+  .mainHeader h1 {
+    font-size: 1.2rem;
+  }
+
+  .btn {
+    font-size: 0.8rem;
+  }
+
   .gridHeaderWrapper {
     padding-left: 0;
   }
